@@ -2,96 +2,50 @@ package co.rsk.federate.btcreleaseclient;
 
 import static co.rsk.federate.signing.PowPegNodeKeyId.BTC;
 import static co.rsk.federate.signing.utils.TestUtils.createHash;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
-import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.spy;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
-import co.rsk.bitcoinj.core.BtcECKey;
-import co.rsk.bitcoinj.core.BtcTransaction;
-import co.rsk.bitcoinj.core.Coin;
-import co.rsk.bitcoinj.core.NetworkParameters;
-import co.rsk.bitcoinj.core.Sha256Hash;
-import co.rsk.bitcoinj.core.TransactionInput;
+import co.rsk.bitcoinj.core.*;
 import co.rsk.bitcoinj.crypto.TransactionSignature;
 import co.rsk.bitcoinj.params.MainNetParams;
-import co.rsk.bitcoinj.script.Script;
-import co.rsk.bitcoinj.script.ScriptBuilder;
-import co.rsk.bitcoinj.script.ScriptChunk;
-import co.rsk.federate.bitcoin.BitcoinTestUtils;
-import co.rsk.peg.bitcoin.BitcoinUtils;
-import co.rsk.peg.bitcoin.FlyoverRedeemScriptBuilderImpl;
-import co.rsk.peg.constants.BridgeConstants;
+import co.rsk.bitcoinj.script.*;
 import co.rsk.crypto.Keccak256;
 import co.rsk.federate.FederatorSupport;
+import co.rsk.federate.bitcoin.BitcoinTestUtils;
 import co.rsk.federate.btcreleaseclient.cache.PegoutSignedCache;
 import co.rsk.federate.btcreleaseclient.cache.PegoutSignedCacheImpl;
 import co.rsk.federate.config.PowpegNodeSystemProperties;
 import co.rsk.federate.mock.SimpleEthereumImpl;
-import co.rsk.federate.signing.ECDSASigner;
-import co.rsk.federate.signing.ECPublicKey;
-import co.rsk.federate.signing.FederationCantSignException;
-import co.rsk.federate.signing.FederatorAlreadySignedException;
-import co.rsk.federate.signing.KeyId;
+import co.rsk.federate.signing.*;
 import co.rsk.federate.signing.hsm.HSMUnsupportedVersionException;
 import co.rsk.federate.signing.hsm.SignerException;
-import co.rsk.federate.signing.hsm.message.HSMReleaseCreationInformationException;
-import co.rsk.federate.signing.hsm.message.ReleaseCreationInformation;
-import co.rsk.federate.signing.hsm.message.ReleaseCreationInformationGetter;
-import co.rsk.federate.signing.hsm.message.SignerMessage;
-import co.rsk.federate.signing.hsm.message.SignerMessageBuilder;
-import co.rsk.federate.signing.hsm.message.SignerMessageBuilderException;
-import co.rsk.federate.signing.hsm.message.SignerMessageBuilderFactory;
-import co.rsk.federate.signing.hsm.message.SignerMessageBuilderV1;
+import co.rsk.federate.signing.hsm.message.*;
 import co.rsk.federate.signing.hsm.requirements.ReleaseRequirementsEnforcer;
 import co.rsk.federate.signing.hsm.requirements.ReleaseRequirementsEnforcerException;
 import co.rsk.federate.signing.utils.TestUtils;
 import co.rsk.net.NodeBlockProcessor;
-import co.rsk.peg.federation.*;
 import co.rsk.peg.StateForFederator;
 import co.rsk.peg.StateForProposedFederator;
+import co.rsk.peg.bitcoin.BitcoinUtils;
+import co.rsk.peg.bitcoin.FlyoverRedeemScriptBuilderImpl;
+import co.rsk.peg.constants.BridgeConstants;
+import co.rsk.peg.federation.*;
+import co.rsk.peg.federation.constants.FederationConstants;
 import java.lang.reflect.Field;
 import java.math.BigInteger;
-import java.time.Clock;
-import java.time.Duration;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.util.AbstractMap;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.SortedMap;
-import java.util.TreeMap;
+import java.time.*;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.ethereum.config.blockchain.upgrades.ConsensusRule;
 import org.ethereum.config.Constants;
 import org.ethereum.config.blockchain.upgrades.ActivationConfig;
+import org.ethereum.config.blockchain.upgrades.ConsensusRule;
 import org.ethereum.core.Block;
 import org.ethereum.core.TransactionReceipt;
 import org.ethereum.crypto.ECKey;
-import org.ethereum.db.BlockStore;
-import org.ethereum.db.ReceiptStore;
-import org.ethereum.db.TransactionInfo;
+import org.ethereum.db.*;
 import org.ethereum.facade.Ethereum;
 import org.ethereum.listener.EthereumListener;
 import org.junit.jupiter.api.BeforeEach;
@@ -102,38 +56,35 @@ import org.mockito.invocation.InvocationOnMock;
 import org.spongycastle.util.encoders.Hex;
 
 class BtcReleaseClientTest {
-
     private static final Duration PEGOUT_SIGNED_CACHE_TTL = Duration.ofMinutes(30);
-
-    private final BlockStore blockStore = mock(BlockStore.class);
-    private final ReceiptStore receiptStore = mock(ReceiptStore.class);
-    private final Block bestBlock = mock(Block.class);
-    private final NetworkParameters params = MainNetParams.get();
-    private final BridgeConstants bridgeConstants = Constants.mainnet().bridgeConstants;
-
     private static final List<BtcECKey> erpFedKeys = Arrays.stream(new String[]{
         "03b9fc46657cf72a1afa007ecf431de1cd27ff5cc8829fa625b66ca47b967e6b24",
         "029cecea902067992d52c38b28bf0bb2345bda9b21eca76b16a17c477a64e43301",
         "03284178e5fbcc63c54c3b38e3ef88adf2da6c526313650041b0ef955763634ebd",
-    }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).collect(Collectors.toList());
+    }).map(hex -> BtcECKey.fromPublicOnly(Hex.decode(hex))).toList();
+
+    private static PowpegNodeSystemProperties powpegNodeSystemProperties;
+    private final BlockStore blockStore = mock(BlockStore.class);
+    private final Block bestBlock = mock(Block.class);
+    private final NetworkParameters params = MainNetParams.get();
+    private final BridgeConstants bridgeConstants = Constants.mainnet().bridgeConstants;
+
+    private ReceiptStore receiptStore;
 
     @BeforeEach
     void setup() {
+        receiptStore = mock(ReceiptStore.class);
+
         Keccak256 blockHash = createHash(123);
         when(bestBlock.getHash()).thenReturn(blockHash); 
         when(bestBlock.getNumber()).thenReturn(5_000L); 
-        when(blockStore.getBlockByHash(blockHash.getBytes()))
-            .thenReturn(bestBlock);
+        when(blockStore.getBlockByHash(blockHash.getBytes())).thenReturn(bestBlock);
     }
 
     @Test
     void start_whenFederationMemberNotPartOfDesiredFederation_shouldThrowException() {
         // Arrange
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
         Federation federation = TestUtils.createFederation(params, 1);
         Federation otherFederation = TestUtils.createFederation(params, 2);
@@ -153,11 +104,8 @@ class BtcReleaseClientTest {
 
     @Test
     void if_start_not_called_rsk_blockchain_not_listened() {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Ethereum ethereum = mock(Ethereum.class);
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        Mockito.doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         new BtcReleaseClient(
             ethereum,
@@ -171,12 +119,9 @@ class BtcReleaseClientTest {
 
     @Test
     void when_start_called_rsk_blockchain_is_listened() {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Ethereum ethereum = mock(Ethereum.class);
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
-        Mockito.doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         BtcReleaseClient btcReleaseClient = new BtcReleaseClient(
             ethereum,
@@ -200,13 +145,9 @@ class BtcReleaseClientTest {
 
     @Test
     void if_stop_called_with_just_one_federation_rsk_blockchain_is_still_listened() {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Ethereum ethereum = mock(Ethereum.class);
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
-        Mockito.doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-      
         BtcReleaseClient btcReleaseClient = new BtcReleaseClient(
             ethereum,
             federatorSupport,
@@ -232,12 +173,9 @@ class BtcReleaseClientTest {
 
     @Test
     void if_stop_called_with_federations_rsk_blockchain_is_not_listened() {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Ethereum ethereum = mock(Ethereum.class);
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        Mockito.doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         BtcReleaseClient btcReleaseClient = new BtcReleaseClient(
             ethereum,
@@ -266,6 +204,7 @@ class BtcReleaseClientTest {
     @Test
     void processReleases_ok() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
         FederationMember federationMember = federation.getMembers().get(0);
 
@@ -286,11 +225,6 @@ class BtcReleaseClientTest {
         when(signer.getPublicKey(BTC.getKeyId())).thenReturn(signerPublicKey);
         when(signer.getVersionForKeyId(BTC.getKeyId())).thenReturn(1);
         when(signer.sign(eq(BTC.getKeyId()), ArgumentMatchers.any())).thenReturn(ethSig);
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         SignerMessageBuilder messageBuilder = new SignerMessageBuilderV1(releaseTx);
         SignerMessageBuilderFactory signerMessageBuilderFactory = mock(SignerMessageBuilderFactory.class);
@@ -351,6 +285,7 @@ class BtcReleaseClientTest {
     @Test
     void having_two_pegouts_signs_only_one() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
         FederationMember federationMember = federation.getMembers().get(0);
         BtcTransaction tx1 = TestUtils.createBtcTransaction(params, federation);
@@ -391,17 +326,9 @@ class BtcReleaseClientTest {
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ethSig).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
 
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
         );
-
-        ReceiptStore receiptStore = mock(ReceiptStore.class);
 
         Keccak256 blockHash1 = createHash(2);
         Block block1 = mock(Block.class);
@@ -461,6 +388,7 @@ class BtcReleaseClientTest {
 
     @Test
     void onBestBlock_whenPegoutTxIsCached_shouldNotSignSamePegoutTxAgain() throws Exception {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 9);
         FederationMember federationMember = federation.getMembers().get(0);
         BtcTransaction pegout = TestUtils.createBtcTransaction(params, federation);
@@ -489,17 +417,9 @@ class BtcReleaseClientTest {
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
 
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
         );
-
-        ReceiptStore receiptStore = mock(ReceiptStore.class);
 
         Keccak256 blockHash = createHash(2);
         Block block = mock(Block.class);
@@ -565,6 +485,7 @@ class BtcReleaseClientTest {
 
     @Test
     void onBestBlock_whenPegoutTxIsCachedWithInvalidTimestamp_shouldSignSamePegoutTxAgain() throws Exception {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 9);
         FederationMember federationMember = federation.getMembers().get(0);
         BtcTransaction pegout = TestUtils.createBtcTransaction(params, federation);
@@ -592,18 +513,9 @@ class BtcReleaseClientTest {
         doReturn(signerPublicKey).when(signer).getPublicKey(BTC.getKeyId());
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
         );
-
-        ReceiptStore receiptStore = mock(ReceiptStore.class);
 
         Keccak256 blockHash = createHash(2);
         Block block = mock(Block.class);
@@ -676,6 +588,7 @@ class BtcReleaseClientTest {
     @Test
     void onBestBlock_whenOnlySvpSpendTxWaitingForSignaturesIsAvailable_shouldAddSignature() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation proposedFederation = TestUtils.createFederation(params, 9);
         FederationMember federationMember = proposedFederation.getMembers().get(0);
         BtcTransaction svpSpendTx = TestUtils.createBtcTransaction(params, proposedFederation);
@@ -704,12 +617,6 @@ class BtcReleaseClientTest {
         doReturn(signerPublicKey).when(signer).getPublicKey(BTC.getKeyId());
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
@@ -768,9 +675,19 @@ class BtcReleaseClientTest {
         );
     }
 
+    private static PowpegNodeSystemProperties getPowpegNodeSystemProperties(boolean isPegoutEnabled) {
+        powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
+        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
+        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
+            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
+        when(powpegNodeSystemProperties.isPegoutEnabled()).thenReturn(isPegoutEnabled); //enabled by default
+        return powpegNodeSystemProperties;
+    }
+
     @Test
     void onBestBlock_whenSvpSpendTxWaitingForSignaturesIsAvailableWithSignatureFromAnotherFederationMember_shouldSendAddSignature() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         List<BtcECKey> federationKeys = TestUtils.getFederationPrivateKeys(9);
         Federation proposedFederation = TestUtils.createFederation(bridgeConstants.getBtcParams(), federationKeys);
         Script scriptSig = proposedFederation.getP2SHScript().createEmptyInputScript(null, proposedFederation.getRedeemScript());
@@ -817,12 +734,6 @@ class BtcReleaseClientTest {
         doReturn(signerPublicKey).when(signer).getPublicKey(BTC.getKeyId());
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
@@ -894,6 +805,7 @@ class BtcReleaseClientTest {
     @Test
     void onBestBlock_whenBothPegoutAndSvpSpendTxWaitingForSignaturesAreAvailableAndFederatorIsOnlyPartOfProposedFederation_shouldOnlyAddOneSignature() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 9);
         BtcTransaction pegout = TestUtils.createBtcTransaction(params, federation);
         Keccak256 pegoutCreationRskTxHash = createHash(0);
@@ -929,12 +841,6 @@ class BtcReleaseClientTest {
         doReturn(signerPublicKey).when(signer).getPublicKey(BTC.getKeyId());
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
@@ -1011,6 +917,7 @@ class BtcReleaseClientTest {
     @Test
     void onBestBlock_whenBothPegoutAndSvpSpendTxWaitingForSignaturesIsAvailable_shouldAddSignatureForBoth() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         List<BtcECKey> keys = Stream.generate(BtcECKey::new).limit(9).toList();
         BtcECKey fedKey = keys.get(0);
         FederationMember federationMember = FederationMember.getFederationMembersFromKeys(keys).get(0);
@@ -1050,12 +957,6 @@ class BtcReleaseClientTest {
         doReturn(signerPublicKey).when(signer).getPublicKey(BTC.getKeyId());
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
@@ -1132,6 +1033,7 @@ class BtcReleaseClientTest {
     @Test
     void onBestBlock_whenSvpSpendTxIsNotReadyToBeSigned_shouldNotAddSignature() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation proposedFederation = TestUtils.createFederation(params, 9);
         FederationMember federationMember = proposedFederation.getMembers().get(0);
         BtcTransaction svpSpendTx = TestUtils.createBtcTransaction(params, proposedFederation);
@@ -1160,12 +1062,6 @@ class BtcReleaseClientTest {
         doReturn(signerPublicKey).when(signer).getPublicKey(BTC.getKeyId());
         doReturn(1).when(signer).getVersionForKeyId(ArgumentMatchers.any(KeyId.class));
         doReturn(ecKey.doSign(new byte[]{})).when(signer).sign(any(KeyId.class), any(SignerMessage.class));
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         SignerMessageBuilderFactory signerMessageBuilderFactory = new SignerMessageBuilderFactory(
             mock(ReceiptStore.class)
@@ -1226,6 +1122,7 @@ class BtcReleaseClientTest {
     @Test
     void onBestBlock_return_when_node_is_syncing() throws BtcReleaseClientException {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
         FederationMember federationMember = federation.getMembers().get(0);
 
@@ -1239,12 +1136,6 @@ class BtcReleaseClientTest {
 
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
         doReturn(federationMember).when(federatorSupport).getFederationMember();
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         NodeBlockProcessor nodeBlockProcessor = mock(NodeBlockProcessor.class);
         when(nodeBlockProcessor.hasBetterBlockToSync()).thenReturn(true);
@@ -1276,6 +1167,7 @@ class BtcReleaseClientTest {
     @Test
     void onBestBlock_return_when_pegout_is_disabled() throws BtcReleaseClientException {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(false);
         Federation federation = TestUtils.createFederation(params, 1);
         FederationMember federationMember = federation.getMembers().get(0);
 
@@ -1289,12 +1181,6 @@ class BtcReleaseClientTest {
 
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
         doReturn(federationMember).when(federatorSupport).getFederationMember();
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(false).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         NodeBlockProcessor nodeBlockProcessor = mock(NodeBlockProcessor.class);
         when(nodeBlockProcessor.hasBetterBlockToSync()).thenReturn(false);
@@ -1326,6 +1212,7 @@ class BtcReleaseClientTest {
     @Test
     void onBlock_return_when_node_is_syncing() {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
         FederationMember federationMember = federation.getMembers().get(0);
 
@@ -1339,12 +1226,6 @@ class BtcReleaseClientTest {
 
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
         doReturn(federationMember).when(federatorSupport).getFederationMember();
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(true).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         NodeBlockProcessor nodeBlockProcessor = mock(NodeBlockProcessor.class);
         when(nodeBlockProcessor.hasBetterBlockToSync()).thenReturn(true);
@@ -1372,6 +1253,7 @@ class BtcReleaseClientTest {
     @Test
     void onBlock_return_when_pegout_is_disabled() {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(false);
         Federation federation = TestUtils.createFederation(params, 1);
         FederationMember federationMember = federation.getMembers().get(0);
 
@@ -1385,12 +1267,6 @@ class BtcReleaseClientTest {
 
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
         doReturn(federationMember).when(federatorSupport).getFederationMember();
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        doReturn(Constants.mainnet()).when(powpegNodeSystemProperties).getNetworkConstants();
-        doReturn(false).when(powpegNodeSystemProperties).isPegoutEnabled();
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         NodeBlockProcessor nodeBlockProcessor = mock(NodeBlockProcessor.class);
         when(nodeBlockProcessor.hasBetterBlockToSync()).thenReturn(false);
@@ -1418,6 +1294,7 @@ class BtcReleaseClientTest {
     @Test
     void validateTxCanBeSigned_ok() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
 
         // Create a tx from the Fed to a random btc address
@@ -1434,6 +1311,7 @@ class BtcReleaseClientTest {
     @Test
     void validateTxCanBeSigned_fast_bridge_ok() throws Exception {
         // Create a StandardMultisigFederation
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
 
         // Create fast bridge redeem script
@@ -1456,6 +1334,7 @@ class BtcReleaseClientTest {
 
     @Test
     void validateTxCanBeSigned_erp_fed_ok() throws Exception {
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 3);
         FederationArgs federationArgs = federation.getArgs();
         ErpFederation nonStandardErpFederation =
@@ -1473,6 +1352,7 @@ class BtcReleaseClientTest {
     @Test
     void validateTxCanBeSigned_federatorAlreadySigned() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         BtcECKey federator1PrivKey = new BtcECKey();
         BtcECKey federator2PrivKey = new BtcECKey();
         List<FederationMember> fedMembers = FederationMember.getFederationMembersFromKeys(Arrays.asList(federator1PrivKey, federator2PrivKey));
@@ -1501,10 +1381,6 @@ class BtcReleaseClientTest {
         inputScript = ScriptBuilder.updateScriptWithSignature(inputScript, txSigEncoded, sigIndex, 1, 1);
         releaseInput.setScriptSig(inputScript);
 
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         ECPublicKey signerPublicKey = new ECPublicKey(federator1PrivKey.getPubKey());
         ECDSASigner signer = mock(ECDSASigner.class);
@@ -1539,6 +1415,7 @@ class BtcReleaseClientTest {
     @Test
     void validateTxCanBeSigned_federationCantSign() throws Exception {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         Federation federation = TestUtils.createFederation(params, 1);
 
         // Create a tx from the Fed to a random btc address
@@ -1546,10 +1423,6 @@ class BtcReleaseClientTest {
         TransactionInput releaseInput = TestUtils.createTransactionInput(params, releaseTx, federation);
         releaseTx.addInput(releaseInput);
 
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         BtcECKey fed1Key = federation.getBtcPublicKeys().get(0);
         ECPublicKey signerPublicKey = new ECPublicKey(fed1Key.getPubKey());
@@ -1579,6 +1452,7 @@ class BtcReleaseClientTest {
     @Test
     void removeSignaturesFromTransaction() {
         // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         BtcECKey federator1PrivKey = new BtcECKey();
         BtcECKey federator2PrivKey = new BtcECKey();
         List<FederationMember> fedMembers = FederationMember.getFederationMembersFromKeys(Arrays.asList(federator1PrivKey, federator2PrivKey));
@@ -1594,25 +1468,13 @@ class BtcReleaseClientTest {
         Sha256Hash unsignedTxHash = releaseTx.getHash();
 
         // Sign the transaction
-        Script inputScript = releaseInput.getScriptSig();
-        List<ScriptChunk> chunks = inputScript.getChunks();
-        byte[] program = chunks.get(chunks.size() - 1).data;
-        Script redeemScript = new Script(program);
+        int inputIndex = 0;
+        Sha256Hash sigHash = BitcoinUtils.generateSigHashForP2SHTransactionInput(releaseTx, inputIndex);
+        int sigInsertionIndex = BitcoinUtils.getSigInsertionIndex(releaseTx, inputIndex, sigHash, federator1PrivKey);
+        byte[] federatorSig = federator1PrivKey.sign(sigHash).encodeToDER();
+        TransactionSignature federatorTxSig = new TransactionSignature(BtcECKey.ECDSASignature.decodeFromDER(federatorSig), BtcTransaction.SigHash.ALL, false);
+        BitcoinUtils.signInput(releaseTx, inputIndex, federatorTxSig, sigInsertionIndex, federation.getP2SHScript());
 
-        Sha256Hash sighash = releaseTx.hashForSignature(0, redeemScript, BtcTransaction.SigHash.ALL, false);
-        BtcECKey.ECDSASignature sig = federator1PrivKey.sign(sighash);
-
-        TransactionSignature txSig = new TransactionSignature(sig, BtcTransaction.SigHash.ALL, false);
-        byte[] txSigEncoded = txSig.encodeToBitcoin();
-
-        int sigIndex = inputScript.getSigInsertionIndex(sighash, federator1PrivKey);
-        inputScript = ScriptBuilder.updateScriptWithSignature(inputScript, txSigEncoded, sigIndex, 1, 1);
-        releaseInput.setScriptSig(inputScript);
-
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         BtcReleaseClient client = new BtcReleaseClient(
             mock(Ethereum.class),
@@ -1630,6 +1492,57 @@ class BtcReleaseClientTest {
         // Assert
         assertNotEquals(unsignedTxHash, signedTxHash);
         assertNotEquals(signedTxHash, removedSignaturesTxHash);
+        assertEquals(unsignedTxHash, removedSignaturesTxHash);
+    }
+
+    @Test
+    void removeSignatures_withASegwitCompatibleTransaction_shouldReturnExpectedTx() {
+        // Arrange
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
+        BtcECKey federator1PrivKey = new BtcECKey();
+        BtcECKey federator2PrivKey = new BtcECKey();
+        List<FederationMember> fedMembers = FederationMember.getFederationMembersFromKeys(Arrays.asList(federator1PrivKey, federator2PrivKey));
+        List<BtcECKey> erpPublicKeys = fedMembers.stream().map(FederationMember::getBtcPublicKey).toList();
+        FederationArgs federationArgs = new FederationArgs(fedMembers, Instant.now(), 0, params);
+        FederationConstants federationConstants = bridgeConstants.getFederationConstants();
+        Federation federation = FederationFactory.buildP2shP2wshErpFederation(federationArgs, erpPublicKeys, federationConstants.getErpFedActivationDelay());
+
+        BtcTransaction prevTx = new BtcTransaction(params);
+        Coin prevValue = Coin.COIN;
+        prevTx.addOutput(prevValue, federation.getAddress());
+
+        BtcTransaction releaseTx = new BtcTransaction(params);
+
+        int outputIndex = 0;
+        releaseTx.addInput(prevTx.getOutput(outputIndex));
+
+        int inputIndex = 0;
+        Script redeemScript = federation.getRedeemScript();
+        BitcoinUtils.addSpendingFederationBaseScript(releaseTx, inputIndex, redeemScript, federation.getFormatVersion());
+        Sha256Hash unsignedTxHash = releaseTx.getHash();
+
+        // Sign the transaction
+        Sha256Hash sigHash = BitcoinUtils.generateSigHashForSegwitTransactionInput(releaseTx, inputIndex, releaseTx.getInput(inputIndex).getValue());
+        int sigInsertionIndex = BitcoinUtils.getSigInsertionIndex(releaseTx, inputIndex, sigHash, federator1PrivKey);
+        byte[] federatorSig = federator1PrivKey.sign(sigHash).encodeToDER();
+        TransactionSignature federatorTxSig = new TransactionSignature(BtcECKey.ECDSASignature.decodeFromDER(federatorSig), BtcTransaction.SigHash.ALL, false);
+        BitcoinUtils.signInput(releaseTx, inputIndex, federatorTxSig, sigInsertionIndex, federation.getP2SHScript());
+
+        BtcReleaseClient client = new BtcReleaseClient(
+            mock(Ethereum.class),
+            mock(FederatorSupport.class),
+            powpegNodeSystemProperties,
+            mock(NodeBlockProcessor.class)
+        );
+
+        Sha256Hash signedTxHash = releaseTx.getHash();
+
+        // Act
+        assertEquals(unsignedTxHash, signedTxHash);
+        client.removeSignaturesFromTransaction(releaseTx, federation);
+        Sha256Hash removedSignaturesTxHash = releaseTx.getHash();
+
+        // Assert
         assertEquals(unsignedTxHash, removedSignaturesTxHash);
     }
 
@@ -1693,10 +1606,6 @@ class BtcReleaseClientTest {
         FederatorSupport federatorSupport = mock(FederatorSupport.class);
         doReturn(federationMember).when(federatorSupport).getFederationMember();
 
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
         ECDSASigner signer = mock(ECDSASigner.class);
         doReturn(signerPublicKey).when(signer).getPublicKey(any(KeyId.class));
@@ -1728,11 +1637,7 @@ class BtcReleaseClientTest {
         Script expectedRedeemScript,
         Script redeemScriptToExtract)
     {
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         BtcReleaseClient client = new BtcReleaseClient(
             mock(Ethereum.class),
             mock(FederatorSupport.class),
@@ -1801,12 +1706,8 @@ class BtcReleaseClientTest {
         throws BtcReleaseClientException, SignerException,
         HSMReleaseCreationInformationException, ReleaseRequirementsEnforcerException,
         HSMUnsupportedVersionException, SignerMessageBuilderException {
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.isPegoutEnabled()).thenReturn(true);
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
 
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         NodeBlockProcessor nodeBlockProcessor = mock(NodeBlockProcessor.class);
         when(nodeBlockProcessor.hasBetterBlockToSync()).thenReturn(false);
 
@@ -1910,12 +1811,7 @@ class BtcReleaseClientTest {
     }
 
     private BtcReleaseClient createBtcClient() {
-        PowpegNodeSystemProperties powpegNodeSystemProperties = mock(PowpegNodeSystemProperties.class);
-        when(powpegNodeSystemProperties.getNetworkConstants()).thenReturn(Constants.mainnet());
-        when(powpegNodeSystemProperties.isPegoutEnabled()).thenReturn(true); // Enabled by default
-        when(powpegNodeSystemProperties.getPegoutSignedCacheTtl())
-            .thenReturn(PEGOUT_SIGNED_CACHE_TTL);
-
+        powpegNodeSystemProperties = getPowpegNodeSystemProperties(true);
         return new BtcReleaseClient(
             mock(Ethereum.class),
             mock(FederatorSupport.class),
